--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
-    <div id="duck">
-    </div>
+    <div id="duck"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
